--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "cd server && npm run seed"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "inquirer": "^8.2.6",
-    "pg": "^8.13.0"
+    "pg": "^8.13.1"
   },
   "keywords": [],
   "author": "",
